src/styles/4 - elements/_page.scss
// Page

html {
  font-size: $rem-base;
}

body {
  color: $color-text;
  font-family: $font-roboto;
  background: url('../assets/images/bg.jpg') bottom center no-repeat;
  background-size: cover;
  
  &.fullpage {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
  }
  
  @include bp-mobile {
    background: $color-bg;
    &.fullpage {
      display: block;
    }
  }
}

